// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Portal support \`parent\` prop as a function 1`] = `
<div>
  <div
    class=""
  />
</div>
`;

exports[`Portal support \`parent\` prop as a function 2`] = `<div />`;

exports[`Portal support \`parent\` prop as a function 3`] = `
<div>
  <div
    class=""
    style="display: none;"
  />
</div>
`;

exports[`Portal support \`parent\` prop as a function 4`] = `<div />`;

exports[`Portal support \`parent\` prop as a function 5`] = `<div />`;

exports[`Portal support \`parent\` prop as a function 6`] = `<div />`;

exports[`Portal support \`parent\` prop as an element 1`] = `
<div>
  <div
    class=""
  />
</div>
`;

exports[`Portal support \`parent\` prop as an element 2`] = `<div />`;

exports[`Portal support \`parent\` prop as an element 3`] = `
<div>
  <div
    class=""
    style="display: none;"
  />
</div>
`;

exports[`Portal support \`parent\` prop as an element 4`] = `<div />`;

exports[`Portal support \`parent\` prop as an element 5`] = `<div />`;

exports[`Portal support \`parent\` prop as an element 6`] = `<div />`;

exports[`Portal support \`parent\` prop as null 1`] = `null`;

exports[`Portal support \`parent\` prop as null 2`] = `
<div>
  <div>
    <div
      id="testEl"
    />
  </div>
</div>
`;

exports[`Portal support \`parent\` prop as null 3`] = `null`;

exports[`Portal support \`parent\` prop as null 4`] = `
<div>
  <div
    style="display: none;"
  >
    <div
      id="testEl"
    />
  </div>
</div>
`;

exports[`Portal support \`parent\` prop as null 5`] = `null`;

exports[`Portal support \`parent\` prop as null 6`] = `<div />`;
